parlassets/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlassets-ljubljana-deployment
  labels:
    app: parlassets-ljubljana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlassets-ljubljana
  template:
    metadata:
      labels:
        app: parlassets-ljubljana
    spec:
      containers:
        - name: parlassets-ljubljana-nginx
          image: parlassets-ljubljana
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
