parlassets/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlassets-ajdovscina-nginx
spec:
  selector:
    app: parlassets-ajdovscina
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
