parlassets/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlassets-ajdovscina-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - parlassets-ajdovscina.lb.djnd.si
      secretName: parlassets-ajdovscina-nginx-tls
  rules:
    - host: parlassets-ajdovscina.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlassets-ajdovscina-nginx
                port:
                  number: 80
